Fix getFirst/getLast for Java 11 compatibility